--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "netlify build",
   "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
     "build": "netlify deploy --prod"
   },
   "repository": {
